# cbia-tool

./: .gitignore  README.md  agents.md  justfile  pyproject.toml
.codex/skills/packet-00-1-template-drift-upstream/: SKILL.md
.codex/skills/packet-00-2-naming-ssot-case-hygiene/: SKILL.md
content/modules/co-05-cli-orchestration-with-typer/: DRILLS.md  THEORY.md
content/modules/co-06-content-generation-layer/: DRILLS.md  THEORY.md
control/packets/: packet-00-1-template-drift-upstream.md  packet-00-2-naming-ssot-case-hygiene.md  slug.md
docs/: WORKFLOW.md
notebooks/templates/: 00-init.md  01-drill-template.md
repl/: config.py  konch.py
src/cbia_workbench/: __init__.py
src/cbia_workbench/notebook/: __init__.py  bootstrap.py
src/cbia_workbench/observe/: __init__.py  algoctrl_adapter.py  stage_catalog.py
src/cbia_workbench/operators/: __init__.py  core_ops.py  errors.py  io_json.py
src/cbia_workbench/p1_compute/: __init__.py  bootstrap.py  contracts.py
src/cbia_workbench/p2_inference/: __init__.py
src/cbia_workbench/p3_control/eofl/: __init__.py  gate.py
src/cbia_workbench/p3_control/logging/: __init__.py  session_ndjson.py
src/cbia_workbench/p3_control/observe/: __init__.py  algoctrl_adapter.py  stage_catalog.py
src/cbia_workbench/repl/: __init__.py  _compat.py  bootstrap.py  eofl.py  session_logging.py
src/cbia_workbench/shared/: types.py  util.py
tests/: test_bootstrap.py  test_ramp1_purity.py
tools/: check_case_collisions.py  sync_material.py  verify_material.py
